ngx-translate fixed

--- a/src/app/module-detail/module-detail.page.html
+++ b/src/app/module-detail/module-detail.page.html
@@ -18,7 +18,7 @@
         <ion-card-title>{{modules[selectedID].title}}</ion-card-title>
       </ion-item>
   <br>
-      <p>{{modules[selectedID].note}}</p>
+      <p>{{detail}}</p>
     </ion-card-content>
   </ion-card>
   </ion-content>
